@@ -1,3 +1,11 @@
+2007-09-23  Michael Natterer  <mitch@gimp.org>
+
+	* menus/toolbox-menu.xml.in: added placeholder File/Preferences
+	and move the preferences and keyboard shortcut dialogs there.
+
+	* plug-ins/common/uniteditor.c (query): register the unit editor
+	there too.
+
 2007-09-23  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/pcx.c: avoid pointer arithmetics on void pointers.
